changed filme exercises (alura)